                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2015-11-24
 * Changed Wing::Role::Result::Parent to allow undef to be set on a relationship that is not required or unique.
 * Added on_success to options and behavior for all() and search() in objectListManager in wing.angular.js.

2015-11-20
 * Added fetch_options() to wing.angular.js objectListManager.
 * Added force-number directive to wing.angular.js.

2015-10-20
 * Added qualifiers option to generate_relationships() in Wing::Rest.
 * Change template so search forms submit when you hit enter.

2015-10-05
 * Added a line to bin/dataapps.sh to make Wing compatible with Mac OS X El Capitan.

2015-08-25
 * Added local_cache_path requirement to Role::S3Image.
 * Added fetch() to Role::S3Image.
 * Fixed a bug in Role::UserControlled where you couldn't stack multiple "Controlled" roles, becasue UserControlled would throw an exception if it didn't pass the first step.

2015-08-24
 * Added can_delete() to Wing::DB::Result.

2015-08-19
 * Now generating the _field_name_options method in Wing::Role::Result::Field. Example: _color_options for a field called color.

2015-08-07
 * Added the trends system to track stats over time.

2015-07-22
 * Added call() to objectManager in wing.angular.js to allow for methods that should automatically update the object that are not part of CRUD.
 * Fixed a problem with the auto generated templates instructing to call .list() instead of .all()
 * Added named_options option to generate_all_relationships() to be passed into individual generate_relationship() calls in Wing::Rest.
 * Added queryable option to generate_relationship() in Wing::Rest.
 * Better redirect on templated class index.tt to edit.tt.

2015-07-14